--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8" />
-	<title>Plus3: Comunidad Online de gente Pro y nose que mas escribir:D</title>
+	<title>Mi Primera webapp</title>
 	<link rel="stylesheet" href="normalize.css" />
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
 	<link rel="stylesheet" href="estilos.css" />
